[gd_scene load_steps=8 format=3 uid="uid://bjy3tdoim0h8a"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_m76ft"]
[ext_resource type="PackedScene" uid="uid://c2mmno84r6spm" path="res://scenes/card.tscn" id="2_2hjok"]
[ext_resource type="PackedScene" path="res://hud.tscn" id="3_o3jl3"]
[ext_resource type="AudioStream" uid="uid://ujyo5ye0lldf" path="res://assets/card_matched.wav" id="3_qws13"]
[ext_resource type="AudioStream" uid="uid://vovexound8fk" path="res://assets/success-fanfare-trumpets-6185.mp3" id="4_st650"]
[ext_resource type="AudioStream" uid="uid://duasaevxxd58" path="res://assets/next-level-160613.mp3" id="5_rudj1"]
[ext_resource type="AudioStream" uid="uid://6enblgm6msg6" path="res://assets/game_over.wav" id="6_ml58x"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m76ft")
card_scene = ExtResource("2_2hjok")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.415686, 0.25098, 0.258824, 1)

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="TimeDispalyTimer" type="Timer" parent="."]
autostart = true

[node name="CardMatched" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_qws13")
volume_db = 10.0

[node name="LevelComplete" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_st650")
volume_db = 10.0

[node name="LevelComplete2" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_rudj1")
volume_db = 10.0

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_ml58x")
volume_db = 10.0

[node name="HUD" parent="." instance=ExtResource("3_o3jl3")]
layout_mode = 1

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="TimeDispalyTimer" to="." method="_on_time_dispaly_timer_timeout"]
[connection signal="exposure_button_pressed" from="HUD" to="." method="_on_hud_exposure_button_pressed"]
[connection signal="next_button_pressed" from="HUD" to="." method="_on_hud_next_button_pressed"]
[connection signal="retry_button_pressed" from="HUD" to="." method="_on_hud_retry_button_pressed"]
